--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header class="header">
 
+    </header>
     <script src="./Js/jquery.js"></script>
     <script src="./Js/main.js"></script>
 </body>
