the computer version is finished

--- a/index.html
+++ b/index.html
@@ -4,14 +4,192 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wine</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="header">
-
+      <div class="header_menu">
+        <a href="" class="header_logo"><img src="img/logo.svg" alt="logo" class="header_logo_img"></a>
+        <div class="header_menu_list">
+          <ul class="header_list">
+            <li class="list"><a href="#hero" class="list_text">Главная</a></li>
+            <li class="list"><a href="#about" class="list_text">О нас</a></li>
+            <li class="list"><a href="#catalog" class="list_text">Каталог</a></li>
+            <li class="list"><a href="#Gallery" class="list_text">Галерея</a></li>
+            <li class="list"><a href="#Feedback" class="list_text">Обратная связь</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
+    <main class="main">
+      <section class="hero" id="hero">
+        <div class="hero_info">
+          <div class="line"></div>
+          <p class="hero_text">Если боитесь потолстеть , Обязательно выпейте перед едой бокал вина ! Алкоголь убивает чувство страха </p>
+          <div class="line"></div>
+        </div>
+      </section>
+      <section class="about" id="about">
+        <img src="img/a5288fab8825116d6b182f226c313275 1.png" alt="wine" class="about_img">
+        <div class="about_info">
+          <h2 class="about_title">О нас </h2>
+          <p class="about_text">11 февраля отмечается необычный праздник - Международный день вина. В этот день не имеет особого значения, какое вино вы нальете в бокал – Международный день вина объединяет все сорта.
+          </p>
+          <br>
+          <p class="about_text">Вы все прекрасно знаете — каждая профессия и каждое великое событие в истории имеют свои ежегодные праздники.
+            И точно также — некоторые особенно известные сорта винограда и вин, изготавливаемых из них, имеют свои «дни рождения».
+            Итак — запоминайте или записывайте:
+          </p>
+          <div class="about_position">
+            <a href="" class="about_date">***</a>
+            <div class="about_active">
+              <ul class="about_hover__active">
+                <li class="about_hover__active_text"><span class="red">16 февраля</span> — День Шираза</li>
+                <li class="about_hover__active_text"><span class="red">18 февраля</span> — Международный День вина</li>
+                <li class="about_hover__active_text"><span class="red">13 марта</span> — День Рождения Рислинга</li>
+                <li class="about_hover__active_text"><span class="red">17 апреля</span> — Международный День Мальбека</li>
+                <li class="about_hover__active_text"><span class="red">24 апреля</span> — Международный День Сов Блан</li>
+                <li class="about_hover__active_text"><span class="red">9 мая</span> — Международный День Муската</li>
+                <li class="about_hover__active_text"><span class="red">17 мая</span> — Международный день Пино Гри (Пино Гриджо)</li>
+                <li class="about_hover__active_text"><span class="red">22 мая</span> — Международный День Шардоне</li>
+                <li class="about_hover__active_text"><span class="red">11 июня</span> — Международный День Розе</li>
+                <li class="about_hover__active_text"><span class="red">12 июня</span> — Международный день Пинотажа</li>
+                <li class="about_hover__active_text"><span class="red">19 июня</span> — Международный день Шенен Блана</li>
+                <li class="about_hover__active_text"><span class="red">1 августа</span> — Международный День Альбариньо</li>
+                <li class="about_hover__active_text"><span class="red">18 августа</span> — Международный День Пино Нуар</li>
+                <li class="about_hover__active_text"><span class="red">28 августа</span> — Международный день Кариньян</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="catalog" id="catalog">
+        <div class="container">
+          <h2 class="catalog_title">Каталог</h2>
+          <div class="products">
+            <div class="poduct">
+              <img src="img/wine_1.png" alt="wine1" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_2.png" alt="wine2" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_3.png" alt="wine3" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_4.png" alt="wine4" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_5.png" alt="wine5" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_6.png" alt="wine6" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_6.png" alt="wine5" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_5.png" alt="wine4" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_4.png" alt="wine3" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_3.png" alt="wine2" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_2.png" alt="wine1" class="poducts_img">
+            </div>
+            <div class="poduct">
+              <img src="img/wine_1.png" alt="wine1" class="poducts_img">
+            </div>
+          </div>
+          <div class="product_info">
+            <div class="product_info_img">
+              <img src="img/wine_7.png" alt="wine_7" class="product_info_img__img">
+            </div>
+            <ul class="product_info_list">
+              <li class="product_info_text">Винтаж:  2015</li>
+              <li class="product_info_text">Тип:  Красный</li>
+              <li class="product_info_text">Производитель:  вин Каллена</li>
+              <li class="product_info_text">Сорт:  красного бордоского купажа</li>
+              <li class="product_info_text">Обозначениe:  Диана Мэдлин</li>
+              <li class="product_info_text">Виноградник:  n/a</li>
+              <li class="product_info_text">Страна:  Австралия</li>
+              <li class="product_info_text">Регион:  Западная Австралия</li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <div class="reviews_people">
+              <p class="reviews_people_text">22.10.2017 - <a href="" class="diraction">COLLECTOR1855 НАПИСАЛ</a>:</p>
+              <br>
+              <p class="reviews_people_text">
+                Дегустировали во время мероприятия WA "дело вкуса", поэтому никаких дегустационных заметок, только случайные впечатления. Я говорил это раньше и скажу это снова. Две проблемы с этим так называемым вином премиум-класса. Танины жесткие и сушащие. Во-вторых, небольшая сложность аромата за пределами темных фруктов. Этот образец также кажется вымученным и искусственно концентрированным
+              </p>
+            </div>
+            <div class="reviews_people">
+              <p class="reviews_people_text">5.10.2017 - <a href="" class="diraction">BLACKMAMBA ЛЮБИТ ЭТО ВИНО</a>:</p>
+              <br>
+              <p class="reviews_people_text">
+                Безупречное вино с большой глубиной и очень сытное. Слишком молодое, но, эй, все еще великолепное.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="Gallery" id="Gallery">
+        <div class="container">
+          <div class="Gallery_background">
+            <h2 class="Gallery_title">Фото и Видео доказательство нашего праздника в различных странах </h2>
+            <div class="Gallery_img_background Gallery_position_1">
+              <img src="img/gallery_1.png" alt="gallery_1" class="Gallery_img">
+              <a href="" class="Gallery_text">Фото<br>гостей</a>
+            </div>
+            <div class="Gallery_img_background Gallery_position_2">
+              <img src="img/gallery_2.png" alt="gallery_2" class="Gallery_img">
+              <a  href="" class="Gallery_text">Фотография<br>мероприятия</a>
+            </div>
+            <div class="Gallery_img_background Gallery_position_3">
+              <img src="img/gallery_3.png" alt="gallery_3" class="Gallery_img">
+              <a href="" class="Gallery_text">Видео<br>материалы</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="Feedback" id="Feedback">
+        <div class="container">
+          <div class="Feedback_flex">
+            <h2 class="Feedback_title">Обартная связь</h2>
+            <div class="Feedback_block">
+              <form action="" class="Feedback_forms">
+                <div class="Feedback_forms_bacground_imege">
+                  <input type="text" class="input" name="name" placeholder="Ваше имя">
+                  <input type="text" class="input" name="email" placeholder="Ваша почта" >
+                  <textarea name="Вопрос" placeholder="Вопрос" class="ask"></textarea>
+                  <button class="Feedback_forms_button"><a href="" class="button_text">Отправить</a></button>
+                </div>
+              </form>
+              <div class="Feedback_box">
+                <img src="img/klipartz 9.png" alt="wine" class="Feedback_box_img">
+                <div class="Feedback_box_info">
+                  <img src="img/vk.png" alt="vk" class="Feedback_box_info_img">
+                  <img src="img/tel.png" alt="tel" class="Feedback_box_info_img">
+                  <img src="img/telegram.png" alt="telegram" class="Feedback_box_info_img">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <p class="footer_text">©  Администрация Сайта не несет ответственности за размещаемые Пользователями материалы (в т.ч. информацию и изображения), их содержание и качество.</p>
+    </footer>
     <script src="./Js/jquery.js"></script>
     <script src="./Js/main.js"></script>
 </body>
