--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/plashed.css">
 </head>
-<body>
+<body >
     <header class="header">
       <div class="header_menu">
         <a href="" class="header_logo"><img src="img/logo.svg" alt="logo" class="header_logo_img"></a>
