written adaptive for phones

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tablet.css">
+    <link rel="stylesheet" href="./css/phone.css">
 </head>
 <body >
     <header class="header">
@@ -22,9 +23,14 @@
             <li class="list"><a href="#about" class="list_text">О нас</a></li>
             <li class="list"><a href="#catalog" class="list_text">Каталог</a></li>
             <li class="list"><a href="#Gallery" class="list_text">Галерея</a></li>
-            <li class="list"><a href="#Feedback" class="list_text">Обратная связь</a></li>
+            <li class="list"><a href="#Feedback" class="list_text list_text_width">Обратная связь</a></li>
           </ul>
         </div>
+        <button class="burger_menu">
+          <div class="burger_menu_line burger_menu_line_1"></div>
+          <div class="burger_menu_line burger_menu_line_2"></div>
+          <div class="burger_menu_line burger_menu_line_3"></div>
+        </button>
       </div>
     </header>
     <main class="main">
